# stellar-dataset

./: .gitignore  LICENSE  README.md  THIRD-PARTIES-LICENSE  pyproject.toml  starter_notebook.ipynb
scripts/: extract_stellar_from_celebamaskhq.py  place_prompts_with_dataset.py
src/stellar_dataset/: __init__.py  dataset.py
